force-app/main/default/objects/QTB_PO_Email_Notification__mdt/QTB_PO_Email_Notification__mdt.object-meta.xml
<CustomObject>
    <description>This is to derive the email template based on the user Account Language and country</description>
    <label>PO Email Notification</label>
    <pluralLabel>PO Email Notification</pluralLabel>
</CustomObject>