force-app/main/default/objects/QTB_PO_Email_Notification__mdt/fields/QTB_50_Utilization_Template__c.field-meta.xml
<CustomField>
    <fullName>QTB_50_Utilization_Template__c</fullName>
    <label>50% Utilization Template</label>
    <length>244</length>
    <type>Text</type>
</CustomField>