force-app/main/default/objects/QTB_PO_Email_Notification__mdt/fields/QTB_After_Expiring_Template__c.field-meta.xml
<CustomField>
    <fullName>QTB_After_Expiring_Template__c</fullName>
    <label>After Expiring Template</label>
    <length>244</length>
    <type>Text</type>
</CustomField>