force-app/main/default/objects/QTB_PO_Email_Notification__mdt/fields/QTB_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Country__c</fullName>
    <label>Country</label>
    <length>244</length>
    <type>Text</type>
</CustomField>