force-app/main/default/objects/QTB_PO_Email_Notification__mdt/fields/QTB_From_Address__c.field-meta.xml
<CustomField>
    <fullName>QTB_From_Address__c</fullName>
    <description>Keep the displyname of &apos;Organization-Wide Email Addresses&apos;  from the setup</description>
    <label>From Address</label>
    <length>244</length>
    <type>Text</type>
</CustomField>