force-app/main/default/objects/QTB_PO_Email_Notification__mdt/fields/QTB_Legal_Entity_Number__c.field-meta.xml
<CustomField>
    <fullName>QTB_Legal_Entity_Number__c</fullName>
    <description>This field has been created for differentiating the PO Expiry mail Notification based on Account legal Entity selected</description>
    <label>Legal Entity Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>