force-app/main/default/objects/QTB_PO_Email_Notification__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>QTB_Country__c</columns>
    <columns>QTB_Language__c</columns>
    <columns>QTB_Email_Subject__c</columns>
    <columns>QTB_From_Address__c</columns>
    <columns>QTB_50_Utilization_Template__c</columns>
    <columns>QTB_75_Utilization_Template__c</columns>
    <columns>QTB_90_Utilization_Template__c</columns>
    <columns>QTB_100_Utilization_Template__c</columns>
    <columns>QTB_Before_Expiring_Template__c</columns>
    <columns>QTB_After_Expiring_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
    <language>en_US</language>
</ListView>